@@ -1,31 +1,0 @@
-/*******************************************************************************
- * Copyright (c) 2000, 2004 QNX Software Systems and others.
- * All rights reserved. This program and the accompanying materials 
- * are made available under the terms of the Common Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/cpl-v10.html
- * 
- * Contributors:
- *     QNX Software Systems - Initial API and implementation
- *******************************************************************************/
-
-package org.eclipse.cdt.debug.core.cdi.model;
-
-import org.eclipse.cdt.debug.core.cdi.CDIException;
-import org.eclipse.cdt.debug.core.cdi.ICDICatchEvent;
-
-/**
- * 
- * Represents a catchpoint.
- * 
- * @since Jul 9, 2002
- */
-public interface ICDICatchpoint extends ICDIBreakpoint {
-	/**
-	 * Returns the catch event for this catchpoint.
-	 * 
-	 * @return the catch event for this catchpoint
-	 * @throws CDIException if this method fails.  Reasons include:
-	 */
-	ICDICatchEvent getEvent() throws CDIException;
-}
