@@ -1,0 +1,22 @@
+/**********************************************************************
+ * Copyright (c) 2002,2003,2004 QNX Software Systems and others.
+ * All rights reserved.   This program and the accompanying materials
+ * are made available under the terms of the Common Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/cpl-v10.html
+ * 
+ * Contributors: 
+ * QNX Software Systems - Initial API and implementation
+ ***********************************************************************/
+
+package org.eclipse.cdt.debug.core.cdi.model;
+
+/**
+ * ICDIExceptionpoint
+ */
+public interface ICDIExceptionpoint extends ICDIBreakpoint {
+
+	boolean isStopOnThrow();
+
+	boolean isStopOnCatch();
+}
